objects/ASI_MFM_Expense_Control_Form__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_FG_Bottle_Size__c</fullName>
        <label>Bottle Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_FG_Logistics_Cost_per_Btl__c</fullName>
        <label>Logistics Cost per Btl</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cost_Selection__c</fullName>
        <label>Cost Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stock Price</fullName>
                </value>
                <value>
                    <fullName>List Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_AB_Policy_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AB Policy Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AllocationMethod__c</fullName>
        <inlineHelpText>if by person, user need to input employee code/amount to allocate the expense
if by sales/non-sales, user need to input amount to allocate the expense</inlineHelpText>
        <label>Allocation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Person</fullName>
                </value>
                <value>
                    <fullName>Sales/Non-Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Allocation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>if checked, allocation is mandatory</inlineHelpText>
        <label>Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BUCode__c</fullName>
        <formula>IF ( RecordType.DeveloperName = &quot;ASI_MFM_CN_Expense_Control_Form&quot; ,  TEXT(ASI_MFM_BU__r.ASI_MFM_L3__c) , &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ETL get value as company code in JDE, eg: 39810</inlineHelpText>
        <label>BU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Expense Control Form</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_BU__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN BU</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>CN Expense Control Form</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_BU__c</referenceTo>
        <relationshipLabel>Expense Control Forms</relationshipLabel>
        <relationshipName>Expense_Control_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BudgetControlLevel__c</fullName>
        <inlineHelpText>IF by department, validate current department budget.
IF by expense type, validate department A + B +C total budget, if department A,B,C same value in field &quot;Expense Type&quot;</inlineHelpText>
        <label>Budget Control Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Department</fullName>
                </value>
                <value>
                    <fullName>By Expense Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_BudgetControlMethod__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>IF Hard Control = True, CANNOT exceed the remaining budget
IF Soft Control = False, can exceed the remaining budget
The value should be same in expense type which &quot;Budget Control Level&quot; is by expense type</inlineHelpText>
        <label>Budget Control Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BudgetOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Control_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CIP_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Apply CIP Logic if True</inlineHelpText>
        <label>CIP Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ChineseDescription__c</fullName>
        <label>Chinese Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Department_Category__c</fullName>
        <formula>ASI_MFM_PP_Category__r.ASI_MFM_Department_Attribute__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ETL get this value as Cost Center</inlineHelpText>
        <label>Department  Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Department_Code__c</fullName>
        <formula>ASI_MFM_Sub_Brand__r.ASI_MFM_Sub_brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ETL get this value as Cost Center</inlineHelpText>
        <label>Department  Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Document_Type__c</fullName>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ExpenseType__c</fullName>
        <inlineHelpText>IF field &quot;Budget Control Level&quot; is by Expense Type, the calculation group by logic will use this field</inlineHelpText>
        <label>Expense Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ForPOSMCart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For POSM Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JDE_Adjustment_Schedule__c</fullName>
        <label>JDE Adjustment Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Mandatory_Contract_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory Contract Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Mark_Up_Value__c</fullName>
        <label>Mark Up Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Free Goods</fullName>
                </value>
                <value>
                    <fullName>Consumer A&amp;P Payment</fullName>
                </value>
                <value>
                    <fullName>Trade A&amp;P Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Only_Renovation_Furniture__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this expense type is active in CAPX form</inlineHelpText>
        <label>Only Renovation &amp; Furniture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PP_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PP Category</label>
        <referenceTo>ASI_MFM_PP_Category__c</referenceTo>
        <relationshipLabel>Expense Control Forms</relationshipLabel>
        <relationshipName>Expense_Control_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PercentageAmount__c</fullName>
        <label>Percentage/Amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Reclassification__c</fullName>
        <inlineHelpText>Select specific value for the expense type, user can select the value when do payment</inlineHelpText>
        <label>Reclassification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Maintenance &amp; Repairs</fullName>
                </value>
                <value>
                    <fullName>Office Supply/Exp-General</fullName>
                </value>
                <value>
                    <fullName>Telephone/Teletype/Fax</fullName>
                </value>
                <value>
                    <fullName>Oth Office Operating Exp</fullName>
                </value>
                <value>
                    <fullName>Rental Management Cost</fullName>
                </value>
                <value>
                    <fullName>Building Rental</fullName>
                </value>
                <value>
                    <fullName>Internal Refer</fullName>
                </value>
                <value>
                    <fullName>External Recruitment</fullName>
                </value>
                <value>
                    <fullName>LTM/MC Meeting</fullName>
                </value>
                <value>
                    <fullName>Department Meeting</fullName>
                </value>
                <value>
                    <fullName>Regional Meeting</fullName>
                </value>
                <value>
                    <fullName>Workshop (Cross Function)</fullName>
                </value>
                <value>
                    <fullName>BDM Meeting</fullName>
                </value>
                <value>
                    <fullName>Annual Dinner</fullName>
                </value>
                <value>
                    <fullName>Team Building</fullName>
                </value>
                <value>
                    <fullName>Employee Gift</fullName>
                </value>
                <value>
                    <fullName>Award</fullName>
                </value>
                <value>
                    <fullName>Health Check</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Hunter Fee</fullName>
                </value>
                <value>
                    <fullName>Service Fee</fullName>
                </value>
                <value>
                    <fullName>Advertising Fee</fullName>
                </value>
                <value>
                    <fullName>Candidate Interview Fee</fullName>
                </value>
                <value>
                    <fullName>Internal Referral Bonus</fullName>
                </value>
                <value>
                    <fullName>Taxes and agency fee</fullName>
                </value>
                <value>
                    <fullName>Equipment Rental and other expense</fullName>
                </value>
                <value>
                    <fullName>Training Airfare</fullName>
                </value>
                <value>
                    <fullName>Training Meal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Rental_Request_Expense__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>if checked, this expense type is active rental request form</inlineHelpText>
        <label>Rental Request Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Expense Control Forms</relationshipLabel>
        <relationshipName>Expense_Control_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Subledger_Options__c</fullName>
        <label>Subledger Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Venue Rental Cost</fullName>
                </value>
                <value>
                    <fullName>Meal Cost</fullName>
                </value>
                <value>
                    <fullName>Accommodation Cost</fullName>
                </value>
                <value>
                    <fullName>MV Cost</fullName>
                </value>
                <value>
                    <fullName>绿化费</fullName>
                </value>
                <value>
                    <fullName>Car Rental Cost</fullName>
                </value>
                <value>
                    <fullName>租车费</fullName>
                </value>
                <value>
                    <fullName>司机工资</fullName>
                </value>
                <value>
                    <fullName>司机个人报销（包括加班费、加班餐费、手机费、差旅）</fullName>
                </value>
                <value>
                    <fullName>商务车油费</fullName>
                </value>
                <value>
                    <fullName>商务车停车费, 路桥费及其他 </fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>颂拓(SUUNTO) 手表Suunto 9 Baro旗舰级专业运动智能光电手表黑色</fullName>
                </value>
                <value>
                    <fullName>MONTBLANC万宝龙 大班系列小王子深蓝色树脂豪华款 M尖 118056</fullName>
                </value>
                <value>
                    <fullName>RIMOWA 21寸登机箱拉杆箱SALSA系列哑光红色</fullName>
                </value>
                <value>
                    <fullName>佳能（Canon） EOS 6D Mark II 单反套机（EF 24-70mm f/4L IS USM 镜头）</fullName>
                </value>
                <value>
                    <fullName>浪琴(Longines)瑞士手表 名匠系列机械男表L2.755.4.78.6</fullName>
                </value>
                <value>
                    <fullName>戴森(Dyson) 吹风机 Dyson supersonic HD01 蓝金特别礼盒版</fullName>
                </value>
                <value>
                    <fullName>戴森(Dyson) 吸尘器 V11 ABSOLUTE 智能无绳吸尘器</fullName>
                </value>
                <value>
                    <fullName>戴森（Dyson）无叶电风扇 落地扇AM07 白银色</fullName>
                </value>
                <value>
                    <fullName>戴森(Dyson) 加湿器 加湿风扇二合一AM10白银</fullName>
                </value>
                <value>
                    <fullName>戴森(Dyson) 美发造型器 卷发棒Airwrap 新品 顺滑造型套装</fullName>
                </value>
                <value>
                    <fullName>戴森(Dyson) 车载除螨仪手持吸尘器V7 Trigger+</fullName>
                </value>
                <value>
                    <fullName>戴森（DYSON）DP04 空气净化风扇</fullName>
                </value>
                <value>
                    <fullName>戴森（DYSON） 台灯 CD05 Lightcycle 白银色</fullName>
                </value>
                <value>
                    <fullName>微软（Microsoft）Xbox无线控制器/手柄 蓝灰色</fullName>
                </value>
                <value>
                    <fullName>微软（Microsoft）Surface Laptop 2 超轻薄触控笔记本（13.5英寸 第八代Core i7 16G 1TB SSD ）亮铂金</fullName>
                </value>
                <value>
                    <fullName>微软（Microsoft）Surface Headphones无线降噪智能耳机</fullName>
                </value>
                <value>
                    <fullName>微软（Microsoft）精准鼠标 办公鼠标 无线蓝牙双模鼠标 无缝跨屏 人体工学鼠标 黑色</fullName>
                </value>
                <value>
                    <fullName>DJI 大疆 无人机 悟Inspire 2 四轴专业航拍飞行器 变形无人机 相机套装</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Subledger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>if checked, reclassification is mandatory when do payment</inlineHelpText>
        <label>Subledger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Saving_Formula__c</fullName>
        <label>Tax Saving Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Saving_Purpose__c</fullName>
        <inlineHelpText>The backend Program uses this value as key, please do not change.</inlineHelpText>
        <label>Tax Saving Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Warehouse_Code__c</fullName>
        <label>Warehouse Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_is_IIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is IIT</label>
        <type>Checkbox</type>
    </fields>
    <label>Expense Control Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Department_Category__c</columns>
        <columns>ASI_MFM_PP_Category__c</columns>
        <columns>ASI_MFM_Sub_Brand__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_Department_Code__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_MFM_Rental_Request_Expense__c</columns>
        <columns>ASI_MFM_BUCode__c</columns>
        <columns>ASI_MFM_BudgetControlLevel__c</columns>
        <columns>ASI_MFM_BudgetControlMethod__c</columns>
        <columns>ASI_MFM_BudgetOwner__c</columns>
        <columns>ASI_MFM_Allocation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Expense_Control_Form__c.ASI_MFM_CN_Expense_Control_Form</value>
        </filters>
        <label>All-nw</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Frank</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ExpenseType__c</columns>
        <columns>ASI_MFM_Department_Category__c</columns>
        <columns>ASI_MFM_Sub_Brand__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_Department_Code__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_MFM_Rental_Request_Expense__c</columns>
        <columns>ASI_MFM_BUCode__c</columns>
        <columns>ASI_MFM_BudgetControlLevel__c</columns>
        <columns>ASI_MFM_BudgetControlMethod__c</columns>
        <columns>ASI_MFM_BudgetOwner__c</columns>
        <columns>ASI_MFM_Allocation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Expense_Control_Form__c.ASI_MFM_CN_Expense_Control_Form</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>professional Fee-HQ-HR</value>
        </filters>
        <label>All-Frank</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_qj</fullName>
        <columns>ASI_MFM_Module__c</columns>
        <columns>NAME</columns>
        <columns>ASI_MFM_ChineseDescription__c</columns>
        <columns>ASI_MFM_JDE_Adjustment_Schedule__c</columns>
        <columns>ASI_MFM_Tax_Saving_Purpose__c</columns>
        <columns>ASI_CRM_Cost_Selection__c</columns>
        <columns>ASI_MFM_AB_Policy_Required__c</columns>
        <columns>ASI_MFM_is_IIT__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_Customer_Code__c</columns>
        <columns>ASI_MFM_Warehouse_Code__c</columns>
        <columns>ASI_MFM_ForPOSMCart__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Expense_Control_Form__c.ASI_MFM_CN_Tax_Saving_Control_Form</value>
        </filters>
        <label>All-Tax Saving</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Automobile</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ExpenseType__c</columns>
        <columns>ASI_MFM_Department_Category__c</columns>
        <columns>ASI_MFM_Sub_Brand__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_Department_Code__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Rental_Request_Expense__c</columns>
        <columns>ASI_MFM_BUCode__c</columns>
        <columns>ASI_MFM_BudgetControlLevel__c</columns>
        <columns>ASI_MFM_BudgetControlMethod__c</columns>
        <columns>ASI_MFM_BudgetOwner__c</columns>
        <columns>ASI_MFM_Allocation__c</columns>
        <columns>ASI_MFM_Subledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Expense_Control_Form__c.ASI_MFM_CN_Expense_Control_Form</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Automobile</value>
        </filters>
        <label>Structure Cost - Automobile</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BuildingRental</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ExpenseType__c</columns>
        <columns>ASI_MFM_Department_Category__c</columns>
        <columns>ASI_MFM_Sub_Brand__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_Department_Code__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Rental_Request_Expense__c</columns>
        <columns>ASI_MFM_Mandatory_Contract_Details__c</columns>
        <columns>ASI_MFM_BUCode__c</columns>
        <columns>ASI_MFM_BudgetControlLevel__c</columns>
        <columns>ASI_MFM_BudgetControlMethod__c</columns>
        <columns>ASI_MFM_BudgetOwner__c</columns>
        <columns>ASI_MFM_Allocation__c</columns>
        <columns>ASI_MFM_Reclassification__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Expense_Control_Form__c.ASI_MFM_CN_Expense_Control_Form</value>
        </filters>
        <filters>
            <field>ASI_MFM_ExpenseType__c</field>
            <operation>contains</operation>
            <value>building</value>
        </filters>
        <label>Structure Cost - Building Rental</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Furniture</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ExpenseType__c</columns>
        <columns>ASI_MFM_Department_Category__c</columns>
        <columns>ASI_MFM_Sub_Brand__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_Department_Code__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Rental_Request_Expense__c</columns>
        <columns>ASI_MFM_BUCode__c</columns>
        <columns>ASI_MFM_BudgetControlLevel__c</columns>
        <columns>ASI_MFM_BudgetControlMethod__c</columns>
        <columns>ASI_MFM_BudgetOwner__c</columns>
        <columns>ASI_MFM_Allocation__c</columns>
        <columns>ASI_MFM_CIP_Logic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Expense_Control_Form__c.ASI_MFM_CN_Expense_Control_Form</value>
        </filters>
        <filters>
            <field>ASI_MFM_ExpenseType__c</field>
            <operation>contains</operation>
            <value>Furniture</value>
        </filters>
        <label>Structure Cost - Furniture</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Insurance</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ExpenseType__c</columns>
        <columns>ASI_MFM_BUCode__c</columns>
        <columns>ASI_MFM_Department_Category__c</columns>
        <columns>ASI_MFM_Department_Code__c</columns>
        <columns>ASI_MFM_Sub_Brand__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Rental_Request_Expense__c</columns>
        <columns>ASI_MFM_BudgetControlLevel__c</columns>
        <columns>ASI_MFM_BudgetControlMethod__c</columns>
        <columns>ASI_MFM_BudgetOwner__c</columns>
        <columns>ASI_MFM_Allocation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Expense_Control_Form__c.ASI_MFM_CN_Expense_Control_Form</value>
        </filters>
        <filters>
            <field>ASI_MFM_ExpenseType__c</field>
            <operation>contains</operation>
            <value>Insurance</value>
        </filters>
        <label>Structure Cost - Insurance</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Interviewing</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ExpenseType__c</columns>
        <columns>ASI_MFM_Department_Category__c</columns>
        <columns>ASI_MFM_Sub_Brand__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_Department_Code__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Rental_Request_Expense__c</columns>
        <columns>ASI_MFM_BUCode__c</columns>
        <columns>ASI_MFM_BudgetControlLevel__c</columns>
        <columns>ASI_MFM_BudgetControlMethod__c</columns>
        <columns>ASI_MFM_BudgetOwner__c</columns>
        <columns>ASI_MFM_Allocation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Expense_Control_Form__c.ASI_MFM_CN_Expense_Control_Form</value>
        </filters>
        <filters>
            <field>ASI_MFM_ExpenseType__c</field>
            <operation>contains</operation>
            <value>Interviewing</value>
        </filters>
        <label>Structure Cost - Interviewing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MeetingFee</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ExpenseType__c</columns>
        <columns>ASI_MFM_BUCode__c</columns>
        <columns>ASI_MFM_Department_Category__c</columns>
        <columns>ASI_MFM_Department_Code__c</columns>
        <columns>ASI_MFM_Sub_Brand__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_Rental_Request_Expense__c</columns>
        <columns>ASI_MFM_BudgetControlLevel__c</columns>
        <columns>ASI_MFM_BudgetControlMethod__c</columns>
        <columns>ASI_MFM_BudgetOwner__c</columns>
        <columns>ASI_MFM_Allocation__c</columns>
        <columns>ASI_MFM_Reclassification__c</columns>
        <columns>ASI_MFM_Subledger__c</columns>
        <columns>ASI_MFM_Subledger_Options__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Expense_Control_Form__c.ASI_MFM_CN_Expense_Control_Form</value>
        </filters>
        <filters>
            <field>ASI_MFM_ExpenseType__c</field>
            <operation>contains</operation>
            <value>Meeting Fee</value>
        </filters>
        <label>Structure Cost - Meeting Fee</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>OfficeSupply</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ExpenseType__c</columns>
        <columns>ASI_MFM_Department_Category__c</columns>
        <columns>ASI_MFM_Sub_Brand__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_Department_Code__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Rental_Request_Expense__c</columns>
        <columns>ASI_MFM_BUCode__c</columns>
        <columns>ASI_MFM_BudgetControlLevel__c</columns>
        <columns>ASI_MFM_BudgetControlMethod__c</columns>
        <columns>ASI_MFM_BudgetOwner__c</columns>
        <columns>ASI_MFM_Allocation__c</columns>
        <columns>ASI_MFM_Reclassification__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Expense_Control_Form__c.ASI_MFM_CN_Expense_Control_Form</value>
        </filters>
        <filters>
            <field>ASI_MFM_ExpenseType__c</field>
            <operation>contains</operation>
            <value>Office Supply</value>
        </filters>
        <label>Structure Cost - Office Supply</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Officeequipment</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ExpenseType__c</columns>
        <columns>ASI_MFM_Department_Category__c</columns>
        <columns>ASI_MFM_Sub_Brand__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_Department_Code__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Rental_Request_Expense__c</columns>
        <columns>ASI_MFM_BUCode__c</columns>
        <columns>ASI_MFM_BudgetControlLevel__c</columns>
        <columns>ASI_MFM_BudgetControlMethod__c</columns>
        <columns>ASI_MFM_BudgetOwner__c</columns>
        <columns>ASI_MFM_CIP_Logic__c</columns>
        <columns>ASI_MFM_Allocation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Expense_Control_Form__c.ASI_MFM_CN_Expense_Control_Form</value>
        </filters>
        <filters>
            <field>ASI_MFM_ExpenseType__c</field>
            <operation>contains</operation>
            <value>Office equipment</value>
        </filters>
        <label>Structure Cost - Office equipment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ProfessionalFee</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ExpenseType__c</columns>
        <columns>ASI_MFM_BUCode__c</columns>
        <columns>ASI_MFM_Department_Category__c</columns>
        <columns>ASI_MFM_Department_Code__c</columns>
        <columns>ASI_MFM_Sub_Brand__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Rental_Request_Expense__c</columns>
        <columns>ASI_MFM_BudgetControlLevel__c</columns>
        <columns>ASI_MFM_BudgetControlMethod__c</columns>
        <columns>ASI_MFM_BudgetOwner__c</columns>
        <columns>ASI_MFM_Allocation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Expense_Control_Form__c.ASI_MFM_CN_Expense_Control_Form</value>
        </filters>
        <filters>
            <field>ASI_MFM_ExpenseType__c</field>
            <operation>contains</operation>
            <value>Professional Fee</value>
        </filters>
        <label>Structure Cost - Professional Fee</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Renovation</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ExpenseType__c</columns>
        <columns>ASI_MFM_Department_Category__c</columns>
        <columns>ASI_MFM_Sub_Brand__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_Department_Code__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_CIP_Logic__c</columns>
        <columns>ASI_MFM_Only_Renovation_Furniture__c</columns>
        <columns>ASI_MFM_BUCode__c</columns>
        <columns>ASI_MFM_BudgetControlLevel__c</columns>
        <columns>ASI_MFM_BudgetControlMethod__c</columns>
        <columns>ASI_MFM_BudgetOwner__c</columns>
        <columns>ASI_MFM_Allocation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Expense_Control_Form__c.ASI_MFM_CN_Expense_Control_Form</value>
        </filters>
        <filters>
            <field>ASI_MFM_ExpenseType__c</field>
            <operation>contains</operation>
            <value>Renovation</value>
        </filters>
        <label>Structure Cost - Renovation</label>
        <language>en_US</language>
    </listViews>
</CustomObject>